# Tutoraggio-ISW-IADA-2024-2025

./: .gitignore  README.md  build.sh  requirements.txt
.github/workflows/: deploy.yml
lezioni/0-Introduzione/: README.md
lezioni/1-OOP/: oop.ipynb
lezioni/2-Git/: README.md
lezioni/3-BestPractices/: README.md
lezioni/4-Optimization/: data_analytics.ipynb  hyperparameter_optimization.ipynb  optimization.ipynb  parallelism.ipynb  rise.css  test_multiprocessing.py
lezioni/5-TestingPublishing/: README.md
lezioni/5-TestingPublishing/progetto_esempio/: README.md  debug_example.py  pyproject.toml
lezioni/5-TestingPublishing/progetto_esempio/src/mathutils/: __init__.py  basic.py  extra.py  stats.py
lezioni/5-TestingPublishing/progetto_esempio/src/mathutils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
lezioni/5-TestingPublishing/progetto_esempio/tests/: test_basic.py  test_extra.py  test_stats.py
